# tiny_cell

./: .gitignore  CMakeLists.txt
assets/components/fences/axelent_x-guard/: catalog.json  combinations.json
assets/robots/kuka_agilus/urdf/: kr10_r1100_2.urdf  kr10_r900_2.urdf  kr4_r600.urdf  kr6_r700_2.urdf  kr6_r700_sixx.urdf  kr6_r900_2.urdf  kr6_r900_sixx.urdf
assets/robots/kuka_cybertech/urdf/: kr12_r1450_3.urdf  kr16_r1610_2.urdf  kr16_r2010_2.urdf  kr20_r1810_2.urdf  kr8_r1440_2.urdf  kr8_r2100_2.urdf
assets/robots/kuka_iontec/urdf/: kr20_r3100.urdf  kr30_r2100.urdf  kr50_r2500.urdf  kr70_r2100.urdf
assets/robots/kuka_quantec/urdf/: kr150_r3100_2.urdf  kr210_r2700_2.urdf  kr210_r3100_2.urdf  kr210_r3100_ultra.urdf  kr210_r3300_2_k.urdf  kr240_r2900_2.urdf  kr300_r2700_2.urdf
assets/robots/ur_description/urdf/: ur10e.urdf
docs/: CELL_LAYOUT_DESIGN.md  CONVEYOR_BELTS.md  ENTITY_SYSTEM.md  LAYOUT_SOLVER.md  VISION.md
src/cell/: cell_builder.hpp  cell_layout.hpp  fence_catalog.hpp  fence_catalog_data.hpp  fence_solver.hpp
src/common/: scene_setup.hpp
src/demos/: fence_walls.cpp  palletizing.cpp
src/factory_scene/: belt_mesh.hpp  components.hpp  factory_scene.hpp  pose_component.hpp  render_system.hpp
src/solver/: solver.hpp  types.hpp
src/tools/: gen_lookup.cpp
tests/: test_cell.cpp  test_factory_scene.cpp  test_solver.cpp
